deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp-otus
  template:
    metadata:
      labels:
        app: myapp-otus
    spec:
      containers:
        - name: otus-myapp
          image: 757grok/alag:otus-myapp
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
